# iloveberlin

./: .env.example  .gitignore  README.md  docker-compose.yml  iloveberlin_complete_platform_blueprint.md  iloveberlin_technical_architecture.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/content-engine/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/content-engine/alembic/: env.py
apps/content-engine/alembic/versions/: 001_initial_schema_and_phase1.py
apps/content-engine/config/: content_types.yaml  settings.py
apps/content-engine/scripts/: backfill_article_categories.py  backfill_restaurants.py  delete_all_content.py  regenerate_images.py
apps/content-engine/src/: main.py
apps/content-engine/src/admin/: app.py  auth.py
apps/content-engine/src/ai/: client.py  enricher.py  image_generator.py  prompts.py
apps/content-engine/src/api_client/: auth.py  client.py  content.py  ingest.py  media.py
apps/content-engine/src/db/: engine.py  models.py  settings.py
apps/content-engine/src/pipelines/: articles.py  base.py  competitions.py  events.py  guides.py  restaurants.py  schemas.py  videos.py
apps/content-engine/src/scheduler/: jobs.py
apps/content-engine/src/sources/: base.py  berlin_de.py  google_places.py  overpass.py  rss.py  youtube.py
apps/content-engine/tests/: test_auth.py  test_circuit_breaker.py  test_failure_classification.py  test_image_generator.py  test_ingest.py  test_json_parser.py  test_metrics.py  test_notifications.py  test_overpass_boroughs.py
docs/: README.md
(+599 files in other folders)
